# synauth-mcp

./: LICENSE  README.md  pyproject.toml  server.json
src/synauth_mcp/: __init__.py  server.py
tests/: test_server.py
