[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synauth-mcp"
version = "0.1.3"
description = "SynAuth MCP Server — Biometric approval for AI agent actions via Face ID"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SynAuth", email = "hello@thesynthesis.ai" },
]
keywords = ["mcp", "agent", "auth", "biometric", "face-id", "ai-agent", "authorization", "synauth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://thesynthesis.ai/auth"
Documentation = "https://thesynthesis.ai/api-reference"
Repository = "https://github.com/dennischoubot-glitch/synauth-mcp"

[project.scripts]
synauth-mcp = "synauth_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/synauth_mcp"]
